--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "node app.js"
