--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "fs-extra": "^1.0.0",
+    "rimraf": "^2.5.4",
     "underscore": "^1.8.3"
   },
   "scripts": {
